include_directories(${CMAKE_CURRENT_SOURCE_DIR}/)

file(GLOB UNIT_TEST_VECTOR_SRCS "./*.cc")

file(GLOB_RECURSE UNIT_TEST_DISKANN_SRCS "./*diskann*.cc")

if(NOT WITH_DISKANN)
  list(REMOVE_ITEM UNIT_TEST_VECTOR_SRCS ${UNIT_TEST_DISKANN_SRCS})
endif()

add_library(UNIT_TEST_VECTOR_OBJS OBJECT ${UNIT_TEST_VECTOR_SRCS})

add_dependencies(UNIT_TEST_VECTOR_OBJS ${DEPEND_LIBS})
